On development: 2020-14-02 15:49 Adición de Reportería * Inserción de clases necesarías para la reportería . * Modificación de Vistas para la generación de reportes.

--- a/SegurosEquinoccial.Pymes.Controlador/SegurosEquinoccial.Pymes.Controlador.csproj
+++ b/SegurosEquinoccial.Pymes.Controlador/SegurosEquinoccial.Pymes.Controlador.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Broker\CBroRamo.cs" />
     <Compile Include="Broker\CBroReglas.cs" />
     <Compile Include="Broker\CBroReglasGenerales.cs" />
+    <Compile Include="Broker\CBroReportes.cs" />
     <Compile Include="Broker\CBroResumen.cs" />
     <Compile Include="Broker\CBroSectorEconomico.cs" />
     <Compile Include="Broker\CBroTasa.cs" />
