--- a/SegurosEquinoccial.Pymes.Web/ClientApp/package.json
+++ b/SegurosEquinoccial.Pymes.Web/ClientApp/package.json
@@ -41,11 +41,14 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
+    "file-saver": "^2.0.2",
     "ng2-tooltip-directive": "^2.1.9",
     "ngx-mask": "^8.1.6",
     "ngx-spinner": "^6.0.0",
     "rxjs": "^5.5.6",
+    "sheetjs": "^2.0.0",
     "sweetalert2": "^8.7.0",
+    "xlsx": "^0.15.5",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
