2020-02-18 12:30 Cambios Realizados * Se realizo varios cambios en la administración de usuarios.

--- a/SegurosEquinoccial.Pymes.Servicio/Web.config
+++ b/SegurosEquinoccial.Pymes.Servicio/Web.config
@@ -87,7 +87,7 @@
 </configuration>
 <!--
 <?xml version="1.0" encoding="utf-8"?>
-LOCAL
+
 <configuration>
 
   <configSections>
@@ -108,7 +108,7 @@ LOCAL
       <webHttpBinding>
         <binding name="webHttpTransportSecurity" maxBufferPoolSize="2147483647" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
           <readerQuotas maxDepth="2000000" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
-          <security mode="None" />
+          <security mode="Transport" />
         </binding>
       </webHttpBinding>
     </bindings>
@@ -121,16 +121,16 @@ LOCAL
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="serviceBehaviorAcceso">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="false" />
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
           <serviceAuthorization serviceAuthorizationManagerType="SegurosEquinoccial.Pymes.Servicio.Token.GestionToken, SegurosEquinoccial.Pymes.Servicio" />
         </behavior>
         <behavior name="serviceBehaviorSinAcceso">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="false" />
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
         <behavior name="">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="false" />
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
@@ -140,30 +140,45 @@ LOCAL
       <service behaviorConfiguration="serviceBehaviorAcceso" name="SegurosEquinoccial.Pymes.Servicio.Administracion.SAdministracion">
         <endpoint address="" binding="webHttpBinding" bindingConfiguration="webHttpTransportSecurity"
                   contract="SegurosEquinoccial.Pymes.Servicio.Administracion.ISAdministracion" behaviorConfiguration="web"/>
+        <endpoint address="mex"
+                  binding="mexHttpsBinding"
+                  contract="IMetadataExchange" />
+
       </service>
       <service behaviorConfiguration="serviceBehaviorAcceso" name="SegurosEquinoccial.Pymes.Servicio.Broker.SBroker">
         <endpoint address="" binding="webHttpBinding" bindingConfiguration="webHttpTransportSecurity"
                   contract="SegurosEquinoccial.Pymes.Servicio.Broker.ISBroker" behaviorConfiguration="web"/>
+        <endpoint address="mex"
+                          binding="mexHttpsBinding"
+                          contract="IMetadataExchange" />
       </service>
       <service behaviorConfiguration="serviceBehaviorSinAcceso" name="SegurosEquinoccial.Pymes.Servicio.Gestion.SGesConsultas">
         <endpoint address="" binding="webHttpBinding" bindingConfiguration="webHttpTransportSecurity"
                   contract="SegurosEquinoccial.Pymes.Servicio.Gestion.ISGesConsultas" behaviorConfiguration="web"/>
+        <endpoint address="mex"
+                          binding="mexHttpsBinding"
+                          contract="IMetadataExchange" />
       </service>
       <service behaviorConfiguration="serviceBehaviorSinAcceso" name="SegurosEquinoccial.Pymes.Servicio.Gestion.SGesTransacciones">
         <endpoint address="" binding="webHttpBinding" bindingConfiguration="webHttpTransportSecurity"
                   contract="SegurosEquinoccial.Pymes.Servicio.Gestion.ISGesTransacciones" behaviorConfiguration="web"/>
-                          <endpoint address="mex"
-                           binding="mexHttpsBinding"
-                           contract="IMetadataExchange" />
+        <endpoint address="mex"
+                          binding="mexHttpsBinding"
+                          contract="IMetadataExchange" />
       </service>
     </services>
 
 
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
+
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
-    <directoryBrowse enabled="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
+    <directoryBrowse enabled="true" />
+    <handlers>
+      <add name=".svc" verb="*" path="*.svc"
+      type="System.ServiceModel.Activation.ServiceHttpHandlerFactory, System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </handlers>
   </system.webServer>
 
 </configuration>
