--- a/SegurosEquinoccial.Pymes.Servicio/SegurosEquinoccial.Pymes.Servicio.csproj
+++ b/SegurosEquinoccial.Pymes.Servicio/SegurosEquinoccial.Pymes.Servicio.csproj
@@ -68,6 +68,7 @@
     <Content Include="Gestion\SGesTransacciones.svc" />
     <Content Include="Global.asax" />
     <Content Include="Service1.svc" />
+    <None Include="Properties\PublishProfiles\Equi-ProdBPymesApiAppService - Azure-Servicio.pubxml" />
     <None Include="Properties\PublishProfiles\ServicioProduccion.pubxml" />
     <None Include="Properties\PublishProfiles\ServicioPruebas.pubxml" />
     <None Include="Properties\Settings.settings">
