--- a/SegurosEquinoccial.Pymes.Web/ClientApp/package.json
+++ b/SegurosEquinoccial.Pymes.Web/ClientApp/package.json
@@ -38,6 +38,7 @@
     "@progress/kendo-data-query": "^1.5.1",
     "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-theme-bootstrap": "^3.2.3",
+    "@types/chart.js": "^2.9.16",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.4.1",
     "chart.js": "^2.8.0",
@@ -64,7 +65,7 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
